# FinanceAPI

./: .env.example  README.md  WORKLOG.md  pyproject.toml
.github/workflows/: sync-worklog.yml
src/: database.py  dependencies.py  main.py
src/auth/: routes.py
src/users/: models.py  routes.py  schemas.py  service.py
